Pull up following revision(s) (requested by christos in ticket #325): 	sys/dev/ic/seeq8005.c: revision 1.48 PR/46576: Robert Sprowson: Shutdown doesn't disable TX/RX interrupts in SEEQ8005 driver, plus misc white-space and 0->NULL fixes.